# pmatrix

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
Sources/smatrix/: Config.swift  Terminal.swift  main.swift
src/pmatrix/: __init__.py  cli.py  column.py  config.py  drop.py  matrix.py  terminal.py
