[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pmatrix"
version = "1.0.0"
description = "A Matrix digital rain effect terminal application, written in Python"
readme = "README.md"
license = { text = "MIT" }
keywords = ["matrix", "terminal", "animation", "rain", "effect"]
requires-python = ">=3.10"

[project.scripts]
pmatrix = "pmatrix.cli:main"

[dependency-groups]
dev = ["ruff>=0.7.0", "ty>=0.0.8"]

[tool.hatch.build.targets.wheel]
packages = ["src/pmatrix"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
